# ganitametrics

./: README.md
config/: CMakeLists.txt  setup.sh
gmTestData/: gmTestRuns.sh  sample_test_system_1.top  sample_test_system_10.top  sample_test_system_11.top  sample_test_system_12.top  sample_test_system_13.top  sample_test_system_14.top  sample_test_system_15.top  sample_test_system_2.top  sample_test_system_3.top  sample_test_system_4.top  sample_test_system_5.top  sample_test_system_6.top  sample_test_system_7.top  sample_test_system_8.top  sample_test_truth_2.top  sample_test_truth_3.top
src/cpp/: GanitaMetrics.cpp  GanitaMetricsDetection.cpp  GanitaMetricsMat.cpp  GanitaMetricsMotDetection.cpp  GanitaMetricsOptions.cpp  GanitaMetricsTopDetection.cpp  GanitaMetricsTrack.cpp  GanitaMetricsTrackSet.cpp  GanitaMetricsUtil.cpp  GanitaMetricsVersion.cpp  GanitaMetricsVisualize.cpp
src/drivers/: gmGenerate.cc  gmetrics.cc
src/include/ganita/metrics/: GanitaMetrics.hpp  GanitaMetricsDetection.hpp  GanitaMetricsMat.hpp  GanitaMetricsMotDetection.hpp  GanitaMetricsOptions.hpp  GanitaMetricsTopDetection.hpp  GanitaMetricsTrack.hpp  GanitaMetricsTrackSet.hpp  GanitaMetricsUtil.hpp  GanitaMetricsVersion.hpp  GanitaMetricsVisualize.hpp
